--- a/app/views/tests/top.html.erb
+++ b/app/views/tests/top.html.erb
@@ -1,2 +1,27 @@
-<h1>Tests#top</h1>
+<h1 class="jquery">Hello jQuery!</h1>
 <p>Find me in app/views/tests/top.html.erb</p>
+
+<div class="swiper">
+    <div class="swiper-wrapper">
+        <div class="swiper-slide">
+            <%= image_tag 'img/nature-1.jpg' %>
+        </div>
+        <div class="swiper-slide">
+           <%= image_tag 'img/nature-2.jpg' %>
+        </div>
+        <div class="swiper-slide">
+           <%= image_tag 'img/nature-3.jpg' %>
+        </div>
+        <div class="swiper-slide">
+           <%= image_tag 'img/nature-4.jpg' %>
+        </div>
+        <div class="swiper-slide">
+           <%= image_tag 'img/nature-5.jpg' %>
+        </div>
+    </div>
+    <!-- ページネーションの要素 -->
+    <div class="swiper-pagination"></div>
+    <!-- ナビゲーションボタン （前、次） -->
+    <div class="swiper-button-prev"></div>
+    <div class="swiper-button-next"></div>
+</div>
